results/scraper/box64/998
Building on alpine fails: error: '__uint16_t' undeclared
I'm trying to build box64 on alpine, but these errors occurred during build:
```
ninja: job failed: /usr/bin/gcc -DCONFIG_64BIT -DHAVE_LD80BITS -DNOALIGN -I/workspaces/box64-alpine/src/box64-0.2.4/src/include -I/workspaces/box64-alpine/src/box64-0.2.4/src -I/workspaces/box64-alpine/src/box64-0.2.4/src/wrapped/generated -Os -Wformat -Werror=format-security   -std=gnu11 -funwind-tables -fvisibility=hidden -MD -MT CMakeFiles/interpreter.dir/src/emu/x64run.c.o -MF CMakeFiles/interpreter.dir/src/emu/x64run.c.o.d -o CMakeFiles/interpreter.dir/src/emu/x64run.c.o -c /workspaces/box64-alpine/src/box64-0.2.4/src/emu/x64run.c
/workspaces/box64-alpine/src/box64-0.2.4/src/emu/x64run.c: In function 'Run':
/workspaces/box64-alpine/src/box64-0.2.4/src/emu/x64run.c:1362:36: error: '__uint16_t' undeclared (first use in this function); did you mean 'u_int16_t'?
 1362 |                 emu->segs[_ES] = *(__uint16_t*)(((char*)ED)+4);
      |                                    ^~~~~~~~~~
      |                                    u_int16_t
/workspaces/box64-alpine/src/box64-0.2.4/src/emu/x64run.c:1362:36: note: each undeclared identifier is reported only once for each function it appears in /workspaces/box64-alpine/src/box64-0.2.4/src/emu/x64run.c:1362:47: error: expected expression before ')' token
 1362 |                 emu->segs[_ES] = *(__uint16_t*)(((char*)ED)+4);
      |                                               ^
/workspaces/box64-alpine/src/box64-0.2.4/src/emu/x64run.c:1375:47: error: expected expression before ')' token
 1375 |                 emu->segs[_DS] = *(__uint16_t*)(((char*)ED)+4);
      |                                               ^
```
I found `__uint16_t` in `glibc/posix/bits/types.h`, but can't find it in musl-libc.
Is it safe to replace it with `u_int16_t` in order to pass build?